vertical spacing fixes for homepage and footer

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ section#intro {
 /* Repositórios */
 #repos {
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 
 #repos h4 {
@@ -169,7 +169,7 @@ section#intro {
 /* Footer */
 
 footer {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   text-align: center;
 }
 
